# Machine-Learning-6-SIN-A-Mar-Jul-2026

./: .gitignore  README.md  linear_regression_taxi.ipynb  loss.ipynb  pyproject.toml  workshop.ipynb  workshop0.ipynb  workshop1.ipynb
.devcontainer/: Dockerfile  devcontainer.json  requierments.txt  requirements.txt
notebooks/: main.ipynb
